# 2024-P1-AnshulDadhwal

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
